tests/errors/record-field-typo/main.pa
def me = {name: "reid", age: 28}

def main = me.namee
